adding a comment to show where to play with different GCs